data/derived/sp14/progs/unify/prog1007.ml.out
Characters 556-610:
  | 7 -> buildSinLog ((build (rand, depth - 1)), (build (rand, depth - 1)))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr * expr * expr
